--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Mimi's Bar</title>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
         <link rel="stylesheet"
@@ -703,11 +704,11 @@
             <div class="row">
 
                 <div class="col-sm-4">
-                    <h4>Contact Us</h4>
+                    <h4 class="title">Contact Us</h4>
                     <a class="phone" href="tel:0034960824293"><i class="fa fa-phone"></i>+34960824293</a>
                 </div>
                 <div class="col-sm-4">
-                    <h4>Connect</h4>
+                    <h4 class="title">Connect</h4>
                     <a href="https://es-es.facebook.com/palmeras.alaquas" target="_blank" class="fa fa-facebook"></a>
                 </div>
                 <div class="col-sm-4">
